--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -177,4 +177,7 @@
     <string name="sintVFExist">Síntomas ya fueron ingresados</string>
     <string name="noHaySintVF">El participante no presentó síntomas respiratorios en el periodo que no fue visitado por el personal del CSSFV</string>
     <string name="finalVisitExist">Visita Final ya fue ingresada</string>
+
+    <string name="enSeguimientoCovid19">Participante en seguimiento de Covid19</string>
+    <string name="enTransmisionCovid19">Participante en transmisión de Covid19</string>
 </resources>
