--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -180,4 +180,110 @@
 
     <string name="enSeguimientoCovid19">Participante en seguimiento de Covid19</string>
     <string name="enTransmisionCovid19">Participante en transmisión de Covid19</string>
+
+    <!--Cuestionario Covid19 -->
+    <string name="covid19_questionnaire">Cuestionario Covid19</string>
+    <string name="feb20">1.	¿Desde febrero de 2020 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
+    <string name="feb20Febricula">Sintió febrícula con o sin presencia de temperatura</string>
+    <string name="feb20Fiebre">Fiebre > 38C</string>
+    <string name="feb20Escalofrio">Escalofríos</string>
+    <string name="feb20TemblorEscalofrio">Temblores frecuentes con escalofríos</string>
+    <string name="feb20DolorMuscular">Dolor muscular</string>
+    <string name="feb20DolorArticular">Dolor Articular</string>
+    <string name="feb20SecresionNasal">Secreción Nasal (Rinorrea)</string>
+    <string name="feb20DolorGarganta">Dolor de garganta (Odinofagia)</string>
+    <string name="feb20Tos">Tos o empeoramiento de tos crónica</string>
+    <string name="feb20DificultadResp">Dificultad Respiratoria</string>
+    <string name="feb20DolorPecho">Constante dolor u opresión en el pecho</string>
+    <string name="feb20NauseasVomito">Nausea o Vómitos</string>
+    <string name="feb20DolorCabeza">Dolor de cabeza</string>
+    <string name="feb20DolorAbdominal">Dolor Abdominal</string>
+    <string name="feb20Diarrea">Diarrea (Mas de 3 episodios de heces blandas o semi blandas en 24 horas</string>
+    <string name="feb20DificultadDormir">Dificultad para dormir</string>
+    <string name="feb20Debilidad">Debilidad (Astenia)</string>
+    <string name="feb20PerdidaOlfatoGusto">Perdida del olfato o gusto</string>
+    <string name="feb20Mareo">Mareos</string>
+    <string name="feb20Sarpullido">Sarpullido o decoloración de piel</string>
+    <string name="feb20Desmayo">Desmayo</string>
+    <string name="feb20QuedoCama">Quedo en cama</string>
+    <string name="sabeInicioSintoma">2. ¿Conoce la fecha exacta que iniciaron los síntomas?</string>
+    <string name="inicioSintoma">¿Qué fecha exacta o aproximada empezaron estos síntomas?</string>
+    <string name="fis">Fecha Inicio Síntomas</string>
+    <string name="diaInicioSintoma">Dia</string>
+    <string name="mesInicioSintoma">Mes</string>
+    <string name="anioInicioSintoma">Año</string>
+    <string name="padecidoCovid19">3. ¿Usted cree que en el año 2020 usted o su niño/a pudo haber padecido de COVID-19 o su medico le informo que padeció de COVID-19?</string>
+    <string name="conoceLugarExposicion">4.	¿Conoce en donde usted o su niño/a estuvieron expuestos a COVID-19?</string>
+    <string name="lugarExposicion">¿Dónde fue su exposición?</string>
+    <string name="buscoAyuda">5. ¿Buscó ayuda médica?</string>
+    <string name="dondeBuscoAyuda">6. ¿Dónde busco ayuda médica?</string>
+    <string name="nombreDondeBuscoAyuda">Nombre Centro u hospital</string>
+    <string name="recibioSeguimiento">¿Recibió seguimiento diario por su centro de salud?</string>
+    <string name="tipoSeguimiento">Seguimiento fue por</string>
+    <string name="tmpDespuesBuscoAyuda">7. ¿Cuánto tiempo después de que iniciaron los síntomas de COVID-19 busco ayuda medica?</string>
+    <string name="unaNocheHospital">8. ¿Pasó al menos una noche en el hospital por COVID-19?</string>
+    <string name="queHospital">9. ¿A que hospital acudió?</string>
+    <string name="sabeCuantasNoches">10. ¿Sabe cuantas noches estuvo en el hospital?</string>
+    <string name="cuantasNochesHosp">¿Cuántas noches estuvo en el hospital?</string>
+    <string name="sabeFechaAdmision">11. ¿Sabe cuál fue su fecha de admisión al hospital?</string>
+    <string name="fechaAdmisionHosp">¿Cuál fue su fecha de admisión al hospital?</string>
+    <string name="sabeFechaAlta">12. ¿Sabe cuál fue su fecha de alta médica?</string>
+    <string name="fechaAltaHosp">¿Cuál fue su fecha de alta médica?</string>
+    <string name="utilizoOxigenoCuest">13. Mientras estuvo en el hospital, requirió oxigeno?</string>
+    <string name="estuvoUCI">14. Mientras usted o su niño/a estuvo en el hospital, en algún momento requirió de Unidad de Cuidados Intensivos?</string>
+    <string name="fueIntubadoCuest">¿Recibió ventilación mecánica (Intubado)?</string>
+    <string name="recuperadoCovid19">15. ¿Se ha recuperado del COVID-19 y posee ahora un estado de salud normal o igual al que tenia antes de enfermedad?</string>
+    <string name="queSintomasPresenta">16. ¿Usted o su niño/a que síntomas presenta aún?</string>
+    <string name="febricula">Febrícula o temperatura</string>
+    <string name="cansancio">Cansancio</string>
+    <string name="perdidaOlfatoCuest">Persistente perdida del olfato</string>
+    <string name="perdidaGustoCuest">Persistente perdida del gusto</string>
+    <string name="dificultadRespirar">Dificultad para respirar</string>
+    <string name="dolorPechoCuest">Dolor en el pecho</string>
+    <string name="palpitaciones">Palpitaciones</string>
+    <string name="dolorArticulaciones">Dolor en las articulaciones</string>
+    <string name="paralisis">Parálisis o daño de nervio</string>
+    <string name="mareos">Mareos</string>
+    <string name="pensamientoNublado">Pensamiento nublado</string>
+    <string name="problemasDormir">Problemas para dormir</string>
+    <string name="depresion">Depresión</string>
+    <string name="otrosSintomas">¿Otros síntomas? </string>
+    <string name="cualesSintomas">Cuales fueron:</string>
+    <string name="sabeTiempoRecuperacion">17. ¿ Sabe cuánto tiempo le tomo usted o su niño/a recuperarse de los síntomas secundarios a COVID-19 y recobrar su salud normal?</string>
+    <string name="tiempoRecuperacion">¿ A usted o su niño/a cuanto tiempo le tomo en recuperarse de los síntomas secundarios a COVID-19 y recobrar su salud normal?</string>
+    <string name="tiempoRecuperacionEn">Especificar unidades</string>
+    <string name="severidadEnfermedad">18. ¿En el momento más severo de su enfermedad, diría que su enfermedad o la de su niño/a fue?</string>
+    <string name="tomoMedicamento">19. ¿Tomó medicamentos para COVID-19?</string>
+    <string name="queMedicamento">¿Qué medicamentos tomo para COVID-19?</string>
+    <string name="condiciones">20. ¿Algún medico u otro profesional de la salud le ha dicho alguna vez que usted o su niño/a padece alguna de estas condiciones?</string>
+    <string name="padeceEnfisema">Enfisema o EPOC</string>
+    <string name="padeceAsma">Asma</string>
+    <string name="padeceDiabetes">Diabetes</string>
+    <string name="padeceEnfCoronaria">Enfermedad Coronaria</string>
+    <string name="padecePresionAlta">Presión Arterial Alta</string>
+    <string name="padeceEnfHigado">Enfermedad del Hígado</string>
+    <string name="padeceEnfRenal">Enfermedad Renal</string>
+    <string name="padeceInfartoDerrameCer">Infarto o Derrame Cerebral</string>
+    <string name="padeceCancer">Cáncer</string>
+    <string name="padeceCondicionInmuno">Condición de Inmunosupresión</string>
+    <string name="padeceEnfAutoinmune">Enfermedad Autoinmune</string>
+    <string name="padeceDiscapacidadFis">Discapacidad Física</string>
+    <string name="padeceCondPsicPsiq">Condición Psicológica o Psiquiátrica</string>
+    <string name="padeceOtraCondicion">¿Alguna otra condición?</string>
+    <string name="queOtraCondicion">¿Qué condición o condiciones?</string>
+    <string name="fumado">21. ¿Ha fumado alguna vez en su vida?</string>
+    <string name="fumadoCienCigarrillos">22. ¿Ha fumado al menos 100 cigarrillos en su vida?</string>
+    <string name="fumadoPrevioEnfermedad">23. ¿En los días previos a que se enfermara, usted fumaba cigarrillos todos los días o algunos días previo a que se enfermara?</string>
+    <string name="fumaActualmente">24. ¿Usted fumaba cigarrillos todos los días o algunos días ahora?</string>
+
+    <!--Consentimiento parte E CHF-->
+    <string name="aceptaCHFParteECovid">Parte E CHF</string>
+    <string name="aceptaCHFParteECovidHint">Consentimiento adicional para toma de muestra de sangre</string>
+    <string name="razonNoAceptaParteE">¿Porque no acepta Parte E?</string>
+    <string name="razonNoAceptaParteEHint">Seleccionar porque razón no acepta Parte E</string>
+    <string name="otraRazonNoAceptaParteE">Otra razón no acepta Parte E</string>
+    <string name="otraRazonNoAceptaParteEHint">Indicar porque otra razón no acepta Parte E</string>
+
+    <string name="confirmarValor">¿Confirma respuesta \"<xliff:g id="variable">%1$s</xliff:g>\" para la pregunta \"<xliff:g id="variable2">%2$s</xliff:g>\"?</string>
+
 </resources>
