Versión 5.9.3.0 Extender a 33 la cantidad de días permitidos para ingreso de visita después del ingreso de la casa en tranmisión covid19 Versión 5.9.4.0 Se agrega etiqueta "Casa en transmisión de Covid19. Participante NO enrolado" cuando la casa de familia está en tranmisión covid19, pero el participante no está enrolado en el caso.

--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -180,6 +180,7 @@
 
     <string name="enSeguimientoCovid19">Participante en seguimiento de Covid19</string>
     <string name="enTransmisionCovid19">Participante en transmisión de Covid19</string>
+    <string name="noEnroladoTransmisionCovid19">Casa en transmisión de Covid19. Participante NO Enrolado</string>
 
     <!--Cuestionario Covid19 -->
     <string name="covid19_questionnaire">Cuestionario Covid19</string>
